--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -1,4 +1,7 @@
 @media screen and (max-width: 992px){
+    #content{
+        margin-top: 58px;
+    }
     .nav-container{
         display: none;
     }
