--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,142 +8,132 @@ body{
     font-family: $font-family;
 }
 
-//DESKTOP NAVBAR
-.nav-container{
-    height: 180px;
-    width: 100%;
-    background-color: $body-bg;
-    .main-nav{
-        position: relative;
-        height: 123px;
-        width: 100%;
-        background-color: $white;
-        padding: 0 5vw;
-        .nav-logo-container{
-            float: left;
-            .nav-logo{
+#content{
+    margin-top: 180px;
+}
 
-            }
-        }
-        .nav-links-container{
-            float: right;
-            position: absolute;
-            top: 50%;
-            right: 5vw;
-            transform: translateY(-50%);
-            .nav-link{
-                display: inline;
-                font-size: 17px;
-                font-weight: $bold;
-                text-transform: uppercase;
-                color: $primary-font-color;
-                &:focus{
-                    outline: none;
-                }
-            }
-        }
+@import 'layout';
+
+//CONTENT
+.selected-type{
+    border: 1px solid #000;
+    padding: 5px;
+    p{
+        margin: 0;
+        font-size: 25px;
+        font-weight: $bold;
+        text-transform: uppercase;
+        text-align: center;
     }
-    .secondary-nav{
-        position: relative;
-        height: 57px;
+}
+
+.custom-projects-container{
+    width: 100%;
+    padding: 0 3vw;
+    .row{
+        margin: 0 auto;
         width: 100%;
-        background-color: $secondary-bg;
-        padding: 0 5vw;
-        #secondary-nav{
-            float: right;
-            position: absolute;
-            top: 50%;
-            right: 5vw;
-            transform: translateY(-50%);
-            .nav-link{
-                display: inline;
-                font-size: 17px;
-                font-weight: $bold;
-                text-transform: uppercase;
-                color: $white;
-                &:focus{
-                    outline: none;
+        .gallery-item{
+            position: relative;
+            .gallery-card{
+                position: relative;
+                overflow: hidden;
+                margin: 0;
+                .overlay{
+                    pointer-events: none;
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    background-color: rgba(255,255,255,0.5);
                 }
+            }
+            &:hover{
+                cursor: pointer;
             }
         }
     }
 }
 
-.mobile-nav-container{
+.project-modal {
     display: none;
-    .navbar{
-        background: $white;
-        box-shadow: 0 10px 30px 0 rgba(0,0,0,0.1);
-        .navbar-brand{
-
-        }
-        .navbar-toggler{
-            border: none;
-            #hamburger{
-                .line{
-                    width: 25px;
-                    height: 2px;
-                    background-color: $navbar-toggler-color;
-                    display: block;
-                    margin: 10px auto;
-                    transition: all 0.2s ease-in-out;
-                }
-                &.is-active .line:nth-child(1){
-                    transform: translateY(6px) rotate(45deg);
-                }
-                &.is-active .line:nth-child(2){
-                    transform: translateY(-6px) rotate(-45deg);
+    position: fixed;
+    z-index: 99999;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    background-color: $body-bg;
+    .project-modal-content {
+        display: none;
+        background-color: $white;
+        margin: 0;
+        width: 100%;
+        min-height: 100vh;
+        .project-modal-header{
+            height: 60px;
+            overflow: hidden;
+            padding: 0 3vw;
+            .project-modal-title{
+                color: $primary-font-color;
+                font-weight: $bold;
+                margin: 0;
+                .project-modal-project{
+                    font-size: 16px;
+                    color: $mobile-collapsed-text;
+                    font-weight: $regular;
                 }
             }
-            &:focus{
-                outline: none;
+            .project-modal-close-btn{
+                height: 60px;
+                opacity: 0.7;
+                padding: 0 16px 0 0;
+                background-color: transparent;
+                border: none;
+                img{
+                    width: 20px;
+                    height: 20px;
+                }
+                &:focus{
+                    outline: none;
+                }
+                &:hover{
+                    opacity: 1;
+                }
             }
         }
-        #navbarExpand{
-            .navbar-nav{
-                .nav-item{
-                    .nav-link{
-                        color: $mobile-collapsed-text;
+        .project-modal-body{
+            .carousel{
+                .carousel-indicators{
+                    li{
+                        background-color: $secondary-bg;
                     }
                 }
-                #homeOptions{
-                    background-color: $secondary-bg;
-                    .home-options{
-                        .navbar-nav{
-                            .nav-item{
-                                .nav-link{
-                                    color: $white;
-                                }
-                            }
+                .carousel-inner{
+                    .carousel-item{
+                        img{
+                            width: 100%;
+                            height: calc(100vh - 60px);
+                            object-fit: contain;
                         }
                     }
                 }
-            }
-        }
-    }
-}
-
-//FOOTER
-footer{
-    height: auto;
-    background-color: $footer-bg;
-    padding: 100px 5vw;
-    .content-container{
-        .footer-field{
-            color: $footer-text;
-            .footer-company-name{
-                color: $white;
-            }
-            a{
-                display: block;
-                color: $footer-text;
-                text-transform: capitalize;
-                &:hover{
-                    text-decoration: none;
+                .carousel-control-next-icon{
+                    transform: rotate(180deg);
+                    background-image: url('../img/chevron.svg');
+                }
+                .carousel-control-prev-icon{
+                    background-image: url('../img/chevron.svg');
                 }
             }
         }
     }
 }
+
+
 
 @import 'responsive';
