added home page, fixed url slug

--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -1,6 +1,12 @@
 @media screen and (max-width: 992px){
+    .landing-container{
+        height: calc(80vh - 58px);
+    }
     #content{
         margin-top: 58px;
+    }
+    .placement{
+        display: none;
     }
     .nav-container{
         display: none;
