--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,78 @@ body{
 @import 'layout';
 
 //CONTENT
+.landing-container{
+    height: calc(80vh - 180px);
+    background-color: #000;
+    position: relative;
+    overflow: hidden;
+    .overlay-grid{
+        height: 100%;
+        position: absolute;
+        top: -9999px;
+        bottom: -9999px;
+        left: -9999px;
+        right: -9999px;
+        margin: auto;
+    }
+}
+
+$size: 0.45;
+$measurement: 60px;
+$color: #333;
+
+.placement{
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .containment{
+        transform: scale($size);
+        height: $measurement;
+        width: $measurement;
+        .block{
+            display: inline-block;
+            width: calc(100% / 2 - 6px);
+            height: calc(100% / 2 - 6px);
+            margin: 0 5px -3px 0;
+            padding: calc(6px / 2);
+            .inner-color{
+                background: $color;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .right{
+            float: right;
+        }
+    }
+}
+
+.type-selection-container{
+    padding: 0 5vw;
+    background: $white;
+    min-height: 20vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    .type-btn-link{
+        .type-btn{
+            border: 2px solid #000;
+            background: transparent;
+            color: #000;
+            text-transform: uppercase;
+            font-size: 20px;
+            font-weight: $bold;
+            padding: 10px 15px;
+            margin: 15px;
+            max-width: 300px;
+            min-width: 275px;
+        }
+    }
+}
+
+
 .selected-type{
     border: 1px solid #000;
     padding: 5px;
@@ -27,6 +99,7 @@ body{
     }
 }
 
+//@import 'filters';
 
 @import 'grid';
 
