--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -10,6 +10,12 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0;
+                height: calc(100vw / 4);
+                .gallery-item-img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
                 .overlay{
                     pointer-events: none;
                     position: absolute;
@@ -20,6 +26,12 @@
                     align-items: center;
                     text-align: center;
                     background-color: rgba(255,255,255,0.5);
+                    .overlay-title{
+                        font-weight: $bold;
+                    }
+                    .overlay-text{
+                        font-weight: $semi-bold;
+                    }
                 }
             }
             &:hover{
