--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -1,19 +1,35 @@
 @media screen and (max-width: 992px){
+
     .landing-container{
         height: calc(80vh - 58px);
     }
+
     #content{
         margin-top: 58px;
     }
+
     .placement{
         display: none;
     }
+
     .nav-container{
         display: none;
     }
+
     .mobile-nav-container{
         display: block;
     }
+
+    .custom-projects-container{
+        .row{
+            .gallery-item{
+                .gallery-card{
+                    height: calc(100vw / 3);
+                }
+            }
+        }
+    }
+
     footer{
         padding: 50px 10vw;
         .content-container{
@@ -25,4 +41,29 @@
             }
         }
     }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .landing-container{
+        height: calc(70vh - 58px);
+    }
+
+    .type-selection-container{
+        min-height: 30vh;
+        justify-content: center;
+    }
+
+    .custom-projects-container{
+        .row{
+            .gallery-item{
+                .gallery-card{
+                    height: calc(100vw / 2);
+                    max-height: 200px;
+                }
+            }
+        }
+    }
+
 }
