--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -1,6 +1,32 @@
 .custom-projects-container{
     width: 100%;
     padding: 0 3vw;
+    .categories-items{
+        list-style-type: none;
+        margin: 0;
+        padding: 0 0.25rem;
+        text-align: center;
+        .categories-item{
+            display: inline-block;
+            padding: 10px 15px;
+            margin: 0 10px;
+            .categories-item-link{
+                text-transform: uppercase;
+                color: $primary-font-color;
+                font-weight: $semi-bold;
+                text-decoration: none;
+                cursor: pointer;
+            }
+        }
+    }
+    .divider{
+        width: 100%;
+        padding: 0 0.25rem;
+        margin: 15px 0;
+        .line{
+            border-bottom: 5px solid #ccc;
+        }
+    }
     .row{
         margin: 0 auto;
         width: 100%;
