Contact page ajax email done, styled Email, Team Module done.

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -6,6 +6,8 @@ $navbar-toggler-color: #595959;
 $secondary-bg: #323232;
 $mobile-collapsed-text: #4e4d4d;
 
+$bluish: #5fadc7;
+
 $footer-bg: #141414;
 $footer-text: #bcbcbc;
 
