--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,36 @@ body{
     margin-top: 180px;
 }
 
+.errors{
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 15px 5vw;
+    background-color: $red;
+    ol{
+        margin: 0;
+        list-style-type: none;
+        padding: 0;
+        li{
+            color: $white;
+        }
+    }
+}
+
+.success{
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 15px 5vw;
+    background-color: $green;
+}
+
 @import 'layout';
 
 //CONTENT
@@ -104,5 +134,78 @@ $color: #333;
 @import 'grid';
 
 @import 'modal';
+
+.custom-wide-container{
+    padding: 0 5vw;
+    margin: 0 auto;
+    .contact-details{
+        .contact-heading{
+            font-weight: $bold;
+            margin-bottom: 30px;
+            width: 65%;
+        }
+        .contact-description{
+            font-size: 18px;
+            margin-bottom: 30px;
+            width: 80%;
+        }
+        .contact-detail{
+            font-weight: $bold;
+            font-size: 18px;
+            margin-bottom: 18px;
+            span{
+                font-size: 16px;
+                font-weight: $regular;
+            }
+        }
+    }
+    .contact-form-section{
+        .contact-email-form{
+            .field{
+                width: 100%;
+                height: 50px;
+                padding: 0 15px;
+                margin: 15px 0;
+                border: none;
+                background: $white;
+                &:focus{
+                    outline: none;
+                }
+            }
+            .comment{
+                width: 100%;
+                height: 250px;
+                padding: 15px;
+                margin: 15px 0;
+                border: none;
+                background: $white;
+                resize: none;
+                &:focus{
+                    outline: none;
+                }
+            }
+            .submit-btn{
+                border: none;
+                background: $bluish;
+                padding: 15px 25px;
+                color: $white;
+                text-transform: uppercase;
+                font-size: 14px;
+                font-weight: $bold;
+                letter-spacing: 1px;
+                &:focus{
+                    outline: none;
+                }
+            }
+        }
+    }
+    .contact-map{
+        #map{
+            height: 50vh;
+            width: 100%;
+            background-color: $bluish;
+        }
+    }
+}
 
 @import 'responsive';
