--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -12,19 +12,27 @@
             margin: 0 10px;
             .categories-item-link{
                 text-transform: uppercase;
-                color: $primary-font-color;
-                font-weight: $semi-bold;
+                color: #959595;
+                font-size: 24px;
+                font-weight: $regular;
                 text-decoration: none;
                 cursor: pointer;
+            }
+            &.active{
+                .categories-item-link{
+                    color: #6b6b6b;
+                    font-size: 24px;
+                    font-weight: $bold;
+                }
             }
         }
     }
     .divider{
         width: 100%;
         padding: 0 0.25rem;
-        margin: 15px 0;
+        margin: 10px 0 50px 0;
         .line{
-            border-bottom: 5px solid #ccc;
+            border-bottom: 8px solid #959595;
         }
     }
     .row{
