--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -1,40 +1,91 @@
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1200px) {
+    .custom-wide-container{
+        .contact-details{
+            .contact-heading{
+                width: 85%;
+            }
+            .contact-description{
+                width: 90%;
+            }
+        }
+    }
 
-    .landing-container{
+    .members-grid-container {
+        .member-card-container {
+            .member-img-container {
+                .member-photo {
+                    height: 250px;
+                }
+
+                .member-illustration {
+                    height: 250px;
+                }
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width: 992px) {
+
+    .landing-container {
         height: calc(80vh - 58px);
     }
 
-    #content{
+    #content {
         margin-top: 58px;
     }
 
-    .placement{
+    .placement {
         display: none;
     }
 
-    .nav-container{
+    .nav-container {
         display: none;
     }
 
-    .mobile-nav-container{
+    .mobile-nav-container {
         display: block;
     }
 
-    .custom-projects-container{
-        .row{
-            .gallery-item{
-                .gallery-card{
+    .custom-projects-container {
+        .row {
+            .gallery-item {
+                .gallery-card {
                     height: calc(100vw / 3);
                 }
             }
         }
     }
 
-    footer{
+    .custom-wide-container{
+        .contact-details{
+            .contact-heading{
+                font-size: 35px;
+                width: 100%;
+            }
+            .contact-description{
+                width: 100%;
+            }
+        }
+        .contact-form-section{
+            .contact-email-form{
+                .field{
+                    margin: 10px 0;
+                }
+                .comment{
+                    margin: 10px 0;
+                }
+            }
+        }
+    }
+
+    footer {
         padding: 50px 10vw;
-        .content-container{
-            .footer-field{
-                .footer-social-link{
+
+        .content-container {
+            .footer-field {
+                .footer-social-link {
                     padding: 8px 16px 8px 0;
                     display: inline;
                 }
@@ -46,19 +97,19 @@
 
 @media screen and (max-width: 768px) {
 
-    .landing-container{
+    .landing-container {
         height: calc(70vh - 58px);
     }
 
-    .type-selection-container{
+    .type-selection-container {
         min-height: 30vh;
         justify-content: center;
     }
 
-    .custom-projects-container{
-        .row{
-            .gallery-item{
-                .gallery-card{
+    .custom-projects-container {
+        .row {
+            .gallery-item {
+                .gallery-card {
                     height: calc(100vw / 2);
                     max-height: 200px;
                 }
@@ -66,4 +117,19 @@
         }
     }
 
+    .members-grid-container {
+        .member-card-container {
+            .member-img-container {
+                .member-photo {
+                    height: 200px;
+                }
+
+                .member-illustration {
+                    height: 200px;
+                }
+            }
+        }
+    }
+
 }
+
