--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -38,6 +38,16 @@
     .row{
         margin: 0 auto;
         width: 100%;
+        position: relative;
+        //.cover-up{
+        //    z-index: 9999;
+        //    position: absolute;
+        //    top: 0;
+        //    left: 0;
+        //    background-color: $body-bg;
+        //    width: 100%;
+        //    height: 100%;
+        //}
         .gallery-item{
             position: relative;
             .gallery-card{
