--- a/resources/assets/sass/_team.scss
+++ b/resources/assets/sass/_team.scss
@@ -1,6 +1,6 @@
 .page-name {
     border: 1px solid #000;
-    padding: 5px;
+    padding: 7px 5px 5px 5px;
     p {
         margin: 0;
         font-size: 25px;
