--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,7 +51,7 @@ body {
 
 .selected-type {
     border: 1px solid #000;
-    padding: 5px;
+    padding: 10px 5px 5px 5px;
     p {
         margin: 0;
         font-size: 35px;
