--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -28,6 +28,9 @@
 
 @media screen and (max-width: 992px) {
 
+    .preloader{
+        margin-top: -58px;
+    }
     .landing-container {
         height: calc(80vh - 58px);
     }
