--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -8,15 +8,20 @@
         text-align: center;
         .categories-item{
             display: inline-block;
-            padding: 10px 15px;
-            margin: 0 10px;
             .categories-item-link{
+                margin: 0 10px;
+                padding: 10px 15px;
+                background-color: transparent;
+                border: none;
                 text-transform: uppercase;
                 color: #959595;
                 font-size: 24px;
                 font-weight: $regular;
                 text-decoration: none;
                 cursor: pointer;
+                &:focus{
+                    outline: none;
+                }
             }
             &.active{
                 .categories-item-link{
@@ -55,10 +60,17 @@
                 overflow: hidden;
                 margin: 0;
                 height: calc(100vw / 4);
-                .gallery-item-img{
+                .project-modal-btn{
                     width: 100%;
                     height: 100%;
-                    object-fit: cover;
+                    background: transparent;
+                    border: none;
+                    padding: 0;
+                    .gallery-item-img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
                 .overlay{
                     pointer-events: none;
