--- a/resources/assets/sass/_contact.scss
+++ b/resources/assets/sass/_contact.scss
@@ -1,72 +1,125 @@
-.custom-wide-container{
-    padding: 0 5vw;
-    margin: 0 auto;
-    .contact-details{
-        .contact-heading{
-            font-weight: $bold;
-            margin-bottom: 30px;
-            width: 65%;
-        }
-        .contact-description{
-            font-size: 18px;
-            margin-bottom: 30px;
-            width: 80%;
-        }
-        .contact-detail{
-            font-weight: $bold;
-            font-size: 18px;
-            margin-bottom: 18px;
-            span{
-                font-size: 16px;
-                font-weight: $regular;
-            }
-        }
+.custom-wide-container {
+  padding: 0 5vw;
+  margin: 0 auto;
+
+  .contact-details {
+    .contact-heading {
+      font-weight: $bold;
+      margin-bottom: 30px;
+      width: 65%;
     }
-    .contact-form-section{
-        .contact-email-form{
-            .field{
-                width: 100%;
-                height: 50px;
-                padding: 0 15px;
-                margin: 15px 0;
-                border: none;
-                background: $white;
-                &:focus{
-                    outline: none;
-                }
-            }
-            .comment{
-                width: 100%;
-                height: 250px;
-                padding: 15px;
-                margin: 15px 0;
-                border: none;
-                background: $white;
-                resize: none;
-                &:focus{
-                    outline: none;
-                }
-            }
-            .submit-btn{
-                border: none;
-                background: $bluish;
-                padding: 15px 25px;
-                color: $white;
-                text-transform: uppercase;
-                font-size: 14px;
-                font-weight: $bold;
-                letter-spacing: 1px;
-                &:focus{
-                    outline: none;
-                }
-            }
-        }
+
+    .contact-description {
+      font-size: 18px;
+      margin-bottom: 30px;
+      width: 80%;
     }
-    .contact-map{
-        #map{
-            height: 50vh;
-            width: 100%;
-            background-color: #ccc;
-        }
+
+    .contact-detail {
+      font-weight: $bold;
+      font-size: 18px;
+      margin-bottom: 18px;
+
+      span {
+        font-size: 16px;
+        font-weight: $regular;
+      }
     }
+  }
+
+  .contact-form-section {
+    .contact-email-form {
+      .field {
+        width: 100%;
+        height: 50px;
+        padding: 0 15px;
+        margin: 15px 0;
+        border: none;
+        background: $white;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .comment {
+        width: 100%;
+        height: 250px;
+        padding: 15px;
+        margin: 15px 0;
+        border: none;
+        background: $white;
+        resize: none;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .submit-btn {
+        border: none;
+        background: $bluish;
+        padding: 15px 25px;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: $bold;
+        letter-spacing: 1px;
+        width: auto;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .loader-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: rgb(255,255,255);
+        background: -moz-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(79,84,103,0) 50%);
+        background: -webkit-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(79,84,103,0) 50%);
+        background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(79,84,103,0) 50%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#4f5467",GradientType=1);
+        .loader {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 50px;
+          height: 50px;
+          background: transparent;
+          border: 3px solid rgba(0, 0, 0, 0.1);
+          border-bottom: 3px solid $bluish;
+          border-radius: 50%;
+          animation: rotate 5s infinite;
+        }
+      }
+
+      @keyframes rotate {
+        0% {
+          transform: rotate(0deg);
+        }
+        33% {
+          transform: rotate(900deg);
+        }
+        67% {
+          transform: rotate(-900deg);
+        }
+        100% {
+          transform: rotate(0deg);
+        }
+      }
+    }
+  }
+
+  .contact-map {
+    #map {
+      height: 50vh;
+      width: 100%;
+      background-color: #ccc;
+    }
+  }
 }
