--- a/resources/assets/sass/_preloader.scss
+++ b/resources/assets/sass/_preloader.scss
@@ -1,93 +1,61 @@
-$full: 90px; //the full width of the loader
-$single: 30px; //the width of a single block
-$double: 60px; //the width of 2 blocks
-$element: #aaa; //the little blocks background color
-$bg: #f5f5f5; //the body background color
-$border: 0px; //the little element border width
-$opacity: 0.2; //the starting state of the little blocks animation
-
 .preloader {
     z-index: 999999;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     overflow: hidden;
     position: fixed;
-    background: $bg;
+    background: $body-bg;
     margin-top: -180px;
-    .loader {
+    .load-logo {
         position: absolute;
-        width: $full;
-        height: $full;
         top: 50%;
         left: 50%;
-        margin-left: -50px;
-        margin-top: -50px;
-
-        .loader-block {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: inline-block;
-            opacity: $opacity;
-            border: $border solid $element;
-            width: $single;
-            height: $single;
-            background: $element;
-            animation: show 1s infinite alternate;
-
-            &:nth-child(1) {
-                transform: translate(0, 0);
-                animation-delay: 0.1s;
-            }
-
-            &:nth-child(2) {
-                transform: translate($single, 0);
-                animation-delay: 0.2s;
-            }
-
-            &:nth-child(3) {
-                transform: translate($double, 0);
-                animation-delay: 0.3s;
-            }
-
-            &:nth-child(4) {
-                transform: translate(0, $single);
-                animation-delay: 0.4s;
-            }
-
-            &:nth-child(5) {
-                transform: translate($single, $single);
-                animation-delay: 0.5s;
-            }
-
-            &:nth-child(6) {
-                transform: translate($double, $single);
-                animation-delay: 0.6s;
-            }
-
-            &:nth-child(7) {
-                transform: translate(0, $double);
-                animation-delay: 0.7s;
-            }
-
-            &:nth-child(8) {
-                transform: translate($single, $double);
-                animation-delay: 0.8s;
-            }
-
-            &:nth-child(9) {
-                transform: translate($double, $double);
-                animation-delay: 0.9s;
-            }
-        }
+        transform: translate(-50%, -50%);
+        width: 75px;
     }
 }
 
-@keyframes show {
-    from {
-        opacity: $opacity;
+.pageloader {
+    z-index: 999999;
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
+    position: fixed;
+    background: $body-bg;
+    margin-top: -180px;
+    .load-logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 75px;
     }
-    to {
-        opacity: 1;
+    .load-spinner{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -75px;
+        margin-top: -75px;
+        width: 150px;
+        height: 150px;
+        border: 2px solid transparent;
+        border-bottom: 2px solid $primary-font-color;
+        border-radius: 50%;
+        animation: load 5s infinite;
+    }
+}
+
+@keyframes load {
+    0% {
+        transform: rotate(0deg);
+    }
+    33% {
+        transform: rotate(900deg);
+    }
+    67% {
+        transform: rotate(-900deg);
+    }
+    100% {
+        transform: rotate(0deg);
     }
 }
