--- a/resources/assets/sass/_team.scss
+++ b/resources/assets/sass/_team.scss
@@ -70,4 +70,8 @@
     font-weight: $semi-bold;
     font-size: 15px;
     text-transform: uppercase;
+    &:hover{
+        color: $white;
+        text-decoration: none;
+    }
 }
