--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,7 +5,6 @@
 //GLOBAL
 body {
     margin: 0;
-    min-height: 100vh;
     background: $body-bg;
     font-family: $font-family;
 }
@@ -14,6 +13,7 @@ body {
 
 #content {
     margin-top: 180px;
+    min-height: calc(100vh - 228px);
 }
 
 .errors {
@@ -46,6 +46,45 @@ body {
     width: 100%;
     padding: 15px 5vw;
     background-color: $green;
+}
+
+.loader-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background: rgba(255,255,255,0.7);
+    .loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -25px;
+        margin-left: -25px;
+        width: 50px;
+        height: 50px;
+        background: transparent;
+        border: 3px solid rgba(0, 0, 0, 0.1);
+        border-bottom: 3px solid $bluish;
+        border-radius: 50%;
+        animation: rotate 5s infinite;
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    33% {
+        transform: rotate(900deg);
+    }
+    67% {
+        transform: rotate(-900deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 @import 'layout';
