finished workflow module, added secure ajax access key login, session and appearance of hidden link for the accessed workflow, bug fixes

--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -1,7 +1,7 @@
 //CONTENT
 .landing-container{
     height: calc(80vh - 180px);
-    background-color: #000;
+    background-color: $secondary-bg;
     position: relative;
     overflow: hidden;
     .overlay-grid{
