--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -4,6 +4,9 @@
     background-color: $secondary-bg;
     position: relative;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     .overlay-grid{
         height: 100%;
         position: absolute;
