--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,21 @@ body {
     font-family: $font-family;
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background: $body-bg;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #777;
+    &:hover{
+        background: #333;
+    }
+}
+
 @import 'preloader';
 
 #content {
