--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -7,6 +7,7 @@ $secondary-bg: #323232;
 $mobile-collapsed-text: #4e4d4d;
 
 $bluish: #5fadc7;
+$greyish: #787878;
 
 $footer-bg: #141414;
 $footer-text: #bcbcbc;
