--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -59,7 +59,7 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0;
-                height: calc(100vw / 4);
+                height: 380px;
                 .project-modal-btn{
                     width: 100%;
                     height: 100%;
@@ -81,7 +81,7 @@
                     justify-content: center;
                     align-items: center;
                     text-align: center;
-                    background-color: rgba(255,255,255,0.5);
+                    background-color: rgba(255,255,255,0.7);
                     .overlay-title{
                         font-weight: $bold;
                     }
