--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -50,25 +50,28 @@ $color: #333;
 }
 
 .type-selection-container{
-    padding: 0 5vw;
     background: $white;
-    min-height: 20vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    .type-btn-link{
-        .type-btn{
-            border: 2px solid #000;
-            background: transparent;
-            color: #000;
-            text-transform: uppercase;
-            font-size: 20px;
-            font-weight: $bold;
-            padding: 10px 15px;
-            margin: 15px;
-            max-width: 300px;
-            min-width: 275px;
+    .custom-content{
+        max-width: 1760px !important;
+        margin: 0 auto;
+        min-height: 20vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        .type-btn-link{
+            .type-btn{
+                border: 2px solid #000;
+                background: transparent;
+                color: #000;
+                text-transform: uppercase;
+                font-size: 20px;
+                font-weight: $bold;
+                padding: 10px 15px;
+                margin: 15px;
+                max-width: 300px;
+                min-width: 275px;
+            }
         }
     }
 }
