--- a/resources/assets/sass/_team.scss
+++ b/resources/assets/sass/_team.scss
@@ -1,15 +1,32 @@
-.page-name {
+.selected-page {
     border: 1px solid #000;
-    padding: 7px 5px 5px 5px;
+    padding: 13px 5px 5px 5px;
     p {
         margin: 0;
-        font-size: 25px;
+        font-size: 35px;
         font-weight: $black;
-        text-transform: uppercase;
+        text-transform: capitalize;
         text-align: center;
     }
 }
+
+.page-desc{
+    p{
+        font-size: 20px;
+        font-weight: $semi-bold;
+    }
+}
+
+.page-contact{
+    p{
+        font-size: 18px;
+        font-weight: $semi-bold;
+        color: $greyish;
+    }
+}
+
 .members-grid-container {
+    width: 100%;
     background-color: #eeeeee;
     padding: 50px 5vw;
     .member-card-container {
@@ -39,21 +56,22 @@
             &:hover {
                 .member-photo {
                     opacity: 0;
-                    transition: 0.2s ease-in-out;
+                    transition: 0.5s ease-in-out;
                 }
 
                 .member-illustration {
                     opacity: 1;
-                    transition: 0.2s ease-in-out;
+                    transition: 0.3s ease-in-out;
                 }
             }
         }
         .member-name {
+            font-size: 20px;
             font-weight: $bold;
             margin: 0;
         }
         .member-position {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: $regular;
         }
     }
@@ -65,7 +83,8 @@
 .talk{
     border: none;
     background: $bluish;
-    padding: 20px 30px;
+    padding: 23px 30px 20px 30px;
+    width: 250px;
     color: $white;
     font-weight: $semi-bold;
     font-size: 15px;
@@ -73,5 +92,8 @@
     &:hover{
         color: $white;
         text-decoration: none;
+    }
+    &:focus{
+        outline: none;
     }
 }
