--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -1,20 +1,44 @@
 //CONTENT
-.landing-container{
-    height: calc(80vh - 180px);
-    background-color: $secondary-bg;
+.images{
     position: relative;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    .overlay-grid{
-        height: 100%;
+    background-color: $secondary-bg;
+    #scene{
+        height: calc(80vh - 180px);
+        overflow: hidden;
+        .bg{
+            width: 110%;
+            height: 120%;
+            margin-top: -5%;
+            margin-left: -5%;
+            object-fit: cover;
+        }
+    }
+    #filter{
         position: absolute;
-        top: -9999px;
-        bottom: -9999px;
-        left: -9999px;
-        right: -9999px;
-        margin: auto;
+        height: calc(80vh - 180px);
+        width: 100%;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        background-color: black;
+        opacity: 0.3;
+    }
+    #over{
+        position: absolute;
+        height: calc(80vh - 180px);
+        width: 100%;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        .grid{
+            height: 100%;
+            position: absolute;
+            top: -9999px;
+            bottom: -9999px;
+            left: -9999px;
+            right: -9999px;
+            margin: auto;
+        }
     }
 }
 
