--- a/resources/assets/sass/_modal.scss
+++ b/resources/assets/sass/_modal.scss
@@ -58,15 +58,24 @@
                             width: 100%;
                             height: calc(100vh - 60px);
                             object-fit: contain;
+                            padding: 20px 55px 55px 55px;
                         }
                     }
                 }
-                .carousel-control-next-icon{
-                    transform: rotate(180deg);
-                    background-image: url('../img/chevron.svg');
+                .carousel-control-next{
+                    justify-content: flex-end;
+                    padding: 15px;
+                    .carousel-control-next-icon{
+                        transform: rotate(180deg);
+                        background-image: url('../img/chevron.svg');
+                    }
                 }
-                .carousel-control-prev-icon{
-                    background-image: url('../img/chevron.svg');
+                .carousel-control-prev{
+                    justify-content: flex-start;
+                    padding: 15px;
+                    .carousel-control-prev-icon{
+                        background-image: url('../img/chevron.svg');
+                    }
                 }
             }
         }
