--- a/resources/assets/sass/_dynamic_elements.scss
+++ b/resources/assets/sass/_dynamic_elements.scss
@@ -53,41 +53,13 @@
     background-color: $green;
 }
 
-.loader-container {
+.loading{
     display: none;
+    z-index: 10000;
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
     width: 100%;
-    background: rgba(255,255,255,0.7);
-    .loader {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -25px;
-        margin-left: -25px;
-        width: 50px;
-        height: 50px;
-        background: transparent;
-        border: 3px solid rgba(0, 0, 0, 0.1);
-        border-bottom: 3px solid $bluish;
-        border-radius: 50%;
-        animation: rotate 5s infinite;
-    }
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-    33% {
-        transform: rotate(900deg);
-    }
-    67% {
-        transform: rotate(-900deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
+    height: 100vh;
+    background: $white;
 }
