--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -2,10 +2,12 @@
     width: 100%;
     padding: 0 3vw;
     .categories-items{
+        position: relative;
+        overflow: hidden;
         list-style-type: none;
-        margin: 0;
-        padding: 0 0.25rem;
+        margin: 0 0.25rem;
         text-align: center;
+        white-space: nowrap;
         .categories-item{
             display: inline-block;
             .categories-item-link{
@@ -61,6 +63,8 @@
                 .gallery-item{
                     position: relative;
                     .gallery-card{
+                        transition: 0.1s ease-in-out;
+                        transform: scale(1);
                         position: relative;
                         overflow: hidden;
                         margin: 0;
@@ -75,6 +79,9 @@
                                 width: 100%;
                                 height: 100%;
                                 object-fit: cover;
+                            }
+                            &:focus{
+                                outline: none;
                             }
                         }
                         .overlay{
@@ -93,6 +100,10 @@
                             .overlay-text{
                                 font-weight: $semi-bold;
                             }
+                        }
+                        &:active{
+                            transition: 0.1s ease-in-out;
+                            transform: scale(0.975);
                         }
                     }
                     &:hover{
