--- a/resources/assets/sass/_modal.scss
+++ b/resources/assets/sass/_modal.scss
@@ -58,7 +58,7 @@
                             width: 100%;
                             height: calc(100vh - 60px);
                             object-fit: contain;
-                            padding: 20px 55px 55px 55px;
+                            padding: 0 55px 55px 55px;
                         }
                     }
                 }
