--- a/resources/assets/sass/_team.scss
+++ b/resources/assets/sass/_team.scss
@@ -1,26 +1,15 @@
-.selected-page {
-    border: 1px solid #000;
-    padding: 13px 5px 5px 5px;
+.page-desc {
     p {
         margin: 0;
-        font-size: 35px;
-        font-weight: $black;
-        text-transform: capitalize;
-        text-align: center;
+        font-size: 19px;
+        font-weight: $light;
     }
 }
 
-.page-desc{
-    p{
-        font-size: 20px;
-        font-weight: $semi-bold;
-    }
-}
-
-.page-contact{
-    p{
-        font-size: 18px;
-        font-weight: $semi-bold;
+.page-contact {
+    p {
+        font-size: 17px;
+        font-weight: $light;
         color: $greyish;
     }
 }
@@ -28,18 +17,21 @@
 .members-grid-container {
     width: 100%;
     background-color: #eeeeee;
-    padding: 50px 5vw;
+    padding: 50px 10px;
     .member-card-container {
+        height: calc(100% / 4);
         .member-img-container {
             position: relative;
             padding: 0 0 15px 0;
+
             .member-photo {
                 transition: 0.2s ease-in-out;
                 filter: grayscale(1);
                 width: 100%;
-                height: 350px;
+                height: 100%;
                 object-fit: cover;
             }
+
             &:hover {
                 .member-photo {
                     filter: grayscale(0);
@@ -47,22 +39,28 @@
                 }
             }
         }
+
         .member-name {
-            font-size: 20px;
-            font-weight: $bold;
+            font-size: 19px;
+            font-weight: $black;
             margin: 0;
         }
+
         .member-position {
-            font-size: 18px;
-            font-weight: $regular;
+            font-size: 16px;
+            font-weight: $light;
         }
     }
 }
 
-.need-project{
-    font-weight: $bold;
+.need-project {
+    margin: 0;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: $black;
 }
-.talk{
+
+.talk {
     border: none;
     background: $bluish;
     padding: 23px 30px 20px 30px;
@@ -71,11 +69,13 @@
     font-weight: $semi-bold;
     font-size: 15px;
     text-transform: uppercase;
-    &:hover{
+
+    &:hover {
         color: $white;
         text-decoration: none;
     }
-    &:focus{
+
+    &:focus {
         outline: none;
     }
 }
